--- a/frontend/src/pages/AiInsight.css
+++ b/frontend/src/pages/AiInsight.css
@@ -3,11 +3,17 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.996);
     color:white;
+    /* position: fixed; */
+
 }
 .main-content{
     flex: 1;
     display: flex;
     flex-direction: column;
 }
-
+@media (max-width: 576px){
+    .home{
+        position: fixed;
+    }
+}
 
